--- a/pom.xml
+++ b/pom.xml
@@ -11,32 +11,50 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   	<maven.compiler.source>11</maven.compiler.source>
   	<maven.compiler.settings>${maven.compiler.source}</maven.compiler.settings>
+  	<bootstrap.version>5.2.0</bootstrap.version>
+  	<springboot.version>2.7.3</springboot.version>
   </properties>
+  
+  <parent>
+  	<groupId>org.springframework.boot</groupId>
+  	<artifactId>spring-boot-starter-parent</artifactId>
+  	<version>2.7.3</version>
+  </parent>
   
   <dependencies>
   	
   	<dependency>
-  		<groupId>org.junit.jupiter</groupId>
-  		<artifactId>junit-jupiter</artifactId>
-  		<version>5.5.1</version>
-  		<scope>test</scope>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-web</artifactId>
   	</dependency>
   	
   	<dependency>
-  		<groupId>org.assertj</groupId>
-  		<artifactId>assertj-core</artifactId>
-  		<version>3.13.2</version>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-test</artifactId>
+  	</dependency>
+	
+	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+  	</dependency>
+  	
+  	<dependency>
+  		<groupId>org.mockito</groupId>
+  		<artifactId>mockito-junit-jupiter</artifactId>
   		<scope>test</scope>
+  	</dependency>
+	
+	<dependency>
+  		<groupId>org.webjars</groupId>
+  		<artifactId>bootstrap</artifactId>
+  		<version>${bootstrap.version}</version>
   	</dependency>
   	
   </dependencies>
   
   <build>
   	<plugins>
-  		<plugin>
-  			<artifactId>maven-surefire-plugin</artifactId>
-  			<version>2.22.2</version>
-  		</plugin>
+  		
   	</plugins>
   </build>
   
