--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,18 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
   	</dependency>
 	
 	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter</artifactId>
+  		<scope>test</scope>
+  	</dependency>
+  	
+  	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-api</artifactId>
+  		<scope>test</scope>
+  	</dependency>
+	
+	<dependency>
   		<groupId>org.webjars</groupId>
   		<artifactId>bootstrap</artifactId>
   		<version>${bootstrap.version}</version>
