--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
   		<version>${bootstrap.version}</version>
   	</dependency>
   	
+  	<dependency>
+  		<groupId>javax.validation</groupId>
+  		<artifactId>validation-api</artifactId>
+  		<version>2.0.1.Final</version>
+  		
+  	</dependency>
+  	
   </dependencies>
   
   <build>
